syntax = "proto3";
package veracity.eventstream.journal.v1;

option go_package = "github.com/dogmatiq/veracity/internal/eventstream/internal/eventstreamjournal";

import "github.com/dogmatiq/enginekit/protobuf/envelopepb/envelope.proto";

// Record is a journal record that stores an operation performed on an event
// stream.
message Record {
  uint64 stream_offset_before = 1;
  uint64 stream_offset_after = 2;
  oneof operation { EventsAppended events_appended = 3; }
}

// AppendOperation is an operation that appends a set of events to a stream.
message EventsAppended { repeated dogma.protobuf.Envelope events = 1; }
